update build yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
         uses: jwlawson/actions-setup-cmake@v2
         with:
           cmake-version: '3.28.1'
-          cmake-architecture: x64
+          use-32bit: false
 
       # 3. 配置项目
       - name: Configure
