update build yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,10 @@
-name: Build and Release Hello World
+name: Build and Release Hello World (Windows)
 
 on:
   workflow_dispatch:   # 手动触发
 
 jobs:
-  build-and-release:
+  build-windows:
     runs-on: windows-latest
 
     steps:
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2. 安装指定版本 CMake
+      # 2. 安装 CMake
       - name: Install CMake
         uses: jwlawson/actions-setup-cmake@v2
         with:
@@ -27,10 +27,17 @@ jobs:
       - name: Build
         run: cmake --build build --config Release
 
-      # 5. 上传到 GitHub Release
+      # 5. 设置 Release 文件路径变量
+      - name: Set artifact path
+        id: vars
+        run: echo "artifact_path=build/Release/hello.exe" >> $GITHUB_OUTPUT
+
+      # 6. 创建/更新 Release 并上传文件
       - name: Create GitHub Release
         uses: ncipollo/release-action@v1
         with:
-          tag: v1.0.0                   # Release 的标签
-          name: Release v1.0.0          # Release 名称
-          files: build/Release/hello.exe  # 上传文件路径
+          tag: v1.0.0
+          name: Release v1.0.0
+          artifacts: ${{ steps.vars.outputs.artifact_path }}
+          makeLatest: true
+          token: ${{ secrets.GITHUB_TOKEN }}
